--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -23,6 +23,7 @@ html(lang="en")
         include components/section-social
         include components/section-black2
         include components/footer
+        script(src="./assets/js/app.js")
 
 
 
