--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -22,7 +22,9 @@ html(lang="en")
         include components/section-art
         include components/section-social
         include components/section-black2
+        include components/maps
         include components/footer
+        script(async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgT_CIzAX4qiwBO6u8W_lky7_47s_LfdY&callback=initMap")
         script(src="./assets/js/app.js")
 
 
