--- a/src/pug/application.pug
+++ b/src/pug/application.pug
@@ -36,20 +36,22 @@ html(lang="en")
                                     input(name="password" type="password" placeholder="Введите пароль повторно").prompt-password2-registration
                                     div(class="err")
                                     input(type="submit" value="Регистрация").prompt-button2-registration
+            div(class="main") Главная
+                div(class="maininfo" id="maininfo") Привет
             div(class="tabledisplay") Клиенты
-            div(class="table") 
-                div(id="app1") Наибольший возраст:
-                div(id="app2") Наибольший бюджет:
-                div(id="app3") Количество мужчин:
-                div(id="app4") Количество женщин:
-                table(id="app" border="1px")
-                    tr
-                        th Имя
-                        th Компания
-                        th Email
-                        th Телефон
-                        th Баланс
-                        th Дата регистрации
-                        th Удалить
-                button(class="button-top") Вернуться к началу
+                div(class="table") 
+                    div(id="app1") Наибольший возраст:
+                    div(id="app2") Наибольший бюджет:
+                    div(id="app3") Количество мужчин:
+                    div(id="app4") Количество женщин:
+                    table(id="app" border="1px")
+                        tr
+                            th Имя
+                            th Компания
+                            th Email
+                            th Телефон
+                            th Баланс
+                            th Дата регистрации
+                            th Удалить
+                    button(class="button-top") Вернуться к началу
         script(src="./assets/js/app.js")
