--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -25,7 +25,7 @@ html(lang="en")
         include components/maps
         include components/footer
         script(async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgT_CIzAX4qiwBO6u8W_lky7_47s_LfdY&callback=initMap")
-        script(src="./assets/js/app.js")
+        script(src="./assets/js/appMaps.js")
 
 
 
