--- a/src/pug/application.pug
+++ b/src/pug/application.pug
@@ -18,40 +18,43 @@ html(lang="en")
         div(class="containerAppendix") 
             div(class="allforms" id="allforms")  
                 div(class="containerModal")
-                    a(class="tab") Вход
-                    a(class="tab") Регистрация
+                    a(class="tab-1") Вход
+                    a(class="tab-2") Регистрация
                     div(class="content")
-                        div(id="prompt-form-container" class="c")
+                        div(id="prompt-form-container" class="diventer")
                             form.prompt-form
                                 div.prompt-message
                                     input(name="email" type="email" placeholder="Введите email" required).prompt-email
                                     input(name="password" type="password" placeholder="Введите пароль").prompt-password
                                     div(class="err")
                                     input(type="submit" value="Вход").prompt-button1 
-                        div(id="prompt-form-container" class="c none")    
+                        div(id="prompt-form-container" class="divreg")    
                             form.prompt-form2
                                 div.prompt-message
                                     input(name="email" type="email" placeholder="Введите email" required).prompt-email-registration
                                     input(name="password" type="password" placeholder="Введите пароль").prompt-password-registration
                                     input(name="password" type="password" placeholder="Введите пароль повторно").prompt-password2-registration
-                                    div(class="err")
+                                    div(class="errRegistration")
                                     input(type="submit" value="Регистрация").prompt-button2-registration
-            div(class="main") Главная
-                div(class="maininfo" id="maininfo") Привет
-            div(class="tabledisplay") Клиенты
-                div(class="table") 
+            div(class="homepage")
+                div(class="main") Главная
+                div(class="tabledisplay") Клиенты
+                a(class="exit" href="index.html") Выход
+            div(class="maininfo" id="maininfo")     
+            div(class="table") 
+                div(class="allinfo")
                     div(id="app1") Наибольший возраст:
                     div(id="app2") Наибольший бюджет:
                     div(id="app3") Количество мужчин:
                     div(id="app4") Количество женщин:
-                    table(id="app" border="1px")
-                        tr
-                            th Имя
-                            th Компания
-                            th Email
-                            th Телефон
-                            th Баланс
-                            th Дата регистрации
-                            th Удалить
-                    button(class="button-top") Вернуться к началу
+                table(id="app" border="1px")
+                    tr
+                        th Имя
+                        th Компания
+                        th Email
+                        th Телефон
+                        th Баланс
+                        th Дата регистрации
+                        th Удалить
+                button(class="button-top") Вернуться к началу
         script(src="./assets/js/app.js")
