--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -17,8 +17,7 @@ header.header-top
                 button.search__btn
                     img(src="./assets/imgs/lupa.svg", alt="lupa")
                 input(type="text" placeholder="Поиск").search__field
-            .enter(onClick="hideShow();")
-                a(href="application.html") Приложение
+                a(href="application.html" class="aapplication") Приложение
             a(href="#").header-top__personal
                 img(src="./assets/imgs/people.svg", alt="people").header__img
             a(href="#").header-top__favourite
