--- a/src/pug/application.pug
+++ b/src/pug/application.pug
@@ -38,7 +38,7 @@ html(lang="en")
                                     input(type="submit" value="Регистрация").prompt-button2-registration
             div(class="homepage")
                 div(class="main") Главная
-                div(class="tabledisplay") Клиенты
+                div(class="tabledisplay") Самые крупные клиенты
                 a(class="exit" href="index.html") Выход
             div(class="maininfo" id="maininfo")     
             div(class="table") 
@@ -47,7 +47,9 @@ html(lang="en")
                     div(id="app2") Наибольший бюджет:
                     div(id="app3") Количество мужчин:
                     div(id="app4") Количество женщин:
-                table(id="app" border="1px")
+                    
+                table(id="app" border="1px") 
+
                     tr
                         th Имя
                         th Компания
