--- a/src/pug/application.pug
+++ b/src/pug/application.pug
@@ -16,7 +16,7 @@ html(lang="en")
         link(rel="stylesheet", href="./assets/css/app.css")
     body.wrapper 
         div(class="containerAppendix") 
-            div(class="allforms" id="allforms")  
+            div(class="allForms" id="allForms")  
                 div(class="containerModal")
                     a(class="tab-1") Вход
                     a(class="tab-2") Регистрация
@@ -39,16 +39,16 @@ html(lang="en")
             div(class="homepage")
                 div(class="main") Главная
                 div(class="tabledisplay") Самые крупные клиенты
-                a(class="exit" href="index.html") Выход
-            div(class="maininfo" id="maininfo")     
-            div(class="table") 
-                div(class="allinfo")
-                    div(id="app1" class="client__age") Наибольший возраст:
-                    div(id="app2" class="client__check") Наибольший бюджет:
-                    div(id="app3" class="client__man") Количество мужчин:
-                    div(id="app4" class="client__woman") Количество женщин:
+                div(class="exit") Выход
+            div(class="maininfo" id="maininfo")  
+            div(class="tableAll") 
+                div(class="allInfo")
+                    div(id="app1" class="clientAge") 
+                    div(id="app2" class="clientCheck") 
+                    div(id="app3" class="clientMan") 
+                    div(id="app4" class="clientWoman") 
                     
-                table(id="app" class="client__table" border="1px") 
+                table(id="app" class="clientTable" border="1px") 
                     tr
                         td Имя
                         td Компания
